# hf-bno08x-driver

./: .clang-format  .gitmodules  Doxyfile  README.md  library.properties
.github/workflows/: ci.yml  esp32-component-ci.yml  multi-platform-build.yml
components/bno08x/: CMakeLists.txt  idf_component.yml
docs/: AdvancedNotes.md  BNO085_Complete_Guide.md  Contributing.md  Examples.md  FirmwareUpdate.md  GettingStarted.md  HardwareWiring.md  PortingGuide.md  README.md  RvcMode.md  index.md
examples/: RVC_Basic.cpp  build.sh
examples/arduino/: Dummy.ino
examples/common/: DummyTransport.hpp  main.cpp
examples/esp32/: CMakeLists.txt
examples/esp32/components/bno08x/: CMakeLists.txt  idf_component.yml
examples/esp32/main/: CMakeLists.txt  main.cpp
examples/generic/: BNO085_Basic_Polling.cpp  BNO085_Event_Driven_Callback.cpp  BNO085_Full_Features.cpp  BNO085_Transport.cpp  RVC_Basic.cpp
examples/stm32/: CMakeLists.txt  main.cpp
src/: BNO085.cpp  BNO085.hpp  BNO085_Transport.hpp
src/app/: cal_app.c  console.c  demo_app.c  demo_rvc.c  i2c_hal.c  rvc_hal.c  rvc_hal.h  spi_hal.c  uart_hal.c  usart.c  usart.h
src/dfu/: HalTransport.hpp  IDfuTransport.hpp  MemoryFirmware.hpp  README.md  dfu.h  dfu_bno.cpp  dfu_fsp200.cpp  frame.md
src/esp32/: button.c  dbg.c  i2c_hal.c  spi_hal.c
src/rvc/: README.md  Rvc.hpp  RvcHal.hpp  RvcHalEsp32C6.hpp  rvc.cpp  rvc.h  rvc_hal.c
